Fixed css to make main take up the whole page on firefox

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ main {
 
 body {
     margin: 0;
+    height: 100%;
 }
 
 .box {
